# GChat

./: .editorconfig  .gitignore  GChat.sln  LICENSE  README.md
GC/: CMakeLists.txt  GC.vcxproj  GC.vcxproj.filters
GC-Client/: CMakeLists.txt  GC-Client.vcxproj  GC-Client.vcxproj.filters  main.cpp
GC-Client/Config/: Config.h  ConvertUTF.cpp  ConvertUTF.h  simpleini.h
GC-Client/Release Linux/: GC-Client.exe.recipe
GC-Client/Release Linux/GC-Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GC-SampClient/: GC-SampClient.vcxproj  GC-SampClient.vcxproj.filters  main.cpp
GC-SampClient/Client/: Client.cpp  Client.h
GC-SampClient/Config/: Config.cpp  Config.h  simpleini.h
GC-SampClient/Hook/: Hook.cpp  Hook.h
GC-SampClient/Hooks/: Hooks.cpp  Hooks.h  SendMessage_Hooked.cpp
GC-SampClient/Memory/: Memory.h  Pattern.cpp  Pattern.h
GC-SampClient/Misc/: Colors.h  debug.h
GC-SampClient/SDK/: Samp.cpp  Samp.h
GC-Server/: CMakeLists.txt  GC-Server.vcxproj  GC-Server.vcxproj.filters  main.cpp
GC-Server/Misc/: LogReason.h  Logger.cpp  Logger.h
GC-Server/Release Linux/GC-Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
GC-Server/Server/: DisconnectReason.h  Server.cpp  Server.h
GC-Server/Server/Client/: Client.cpp  Client.h  ClientFlag.h
GC-Server/Server/Command/: Command.cpp  Command.h
GC-Server/Server/Database/: Database.cpp  Database.h
GC/Packets/: ChatMessagePacket.cpp  ChatMessagePacket.h  PacketType.h  RequestPacket.cpp  RequestPacket.h  ServerUpdatePacket.cpp  ServerUpdatePacket.h
GC/Release Linux/GC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
GNet/: CMakeLists.txt  GNet.vcxproj  GNet.vcxproj.filters
GNet-Test/: CMakeLists.txt  GNet-Test.vcxproj  main.cpp
GNet-Test/Release Linux/: GNet-Test.exe.recipe
GNet-Test/Release Linux/GNet-Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GNet/Core/: Network.cpp  Network.h
GNet/Core/Connection/: TCPConnection.cpp  TCPConnection.h
GNet/Core/IPEndpoint/: IPAddress.cpp  IPAddress.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IPv4Address.cpp  IPv4Address.h  IPv6Address.cpp  IPv6Address.h
GNet/Core/Packet/: Packet.cpp  Packet.h  PacketException.h  PacketHandler.cpp  PacketHandler.h  PacketHandlerTask.h
GNet/Core/Socket/: Socket.cpp  Socket.h  SocketException.h  TCPSocket.cpp  TCPSocket.h
GNet/Release Linux/GNet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GNet.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
